# streamlit_packaging_demo

./: README.md
salaries/: pyproject.toml
salaries/src/salaries/: app.py
salaries/src/salaries/assets/style/: dashboard.css
salaries/src/salaries/components/: filters.py  kpis.py
salaries/src/salaries/pages/: dashboard.py
salaries/src/salaries/utils/: constants.py  helpers.py
